# libfacedetectionC

./: .gitignore  CMakeLists.txt  README.md
example/: benchmark.cpp  detect-camera.cpp  detect-image-list.c  detect-image-list.cpp  detect-image.cpp
src/: facedetectcnn-model.c  facedetectcnn-model.cpp  facedetectcnn.c  facedetectcnn.cpp  facedetectcnn.h
weights/: facedetectcnn-data-n.c  facedetectcnn-data-s.c
